k8s/flask_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-dep
spec:
  selector:
    matchLabels:
      app: flask-app
  replicas: 2
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: yzchg/flask_test_app
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - port: 5000
      targetPort: 5000
