k8s/flask_app_ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - port: 5000
      targetPort: 5000

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: flask-app-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: flask-app-service
              servicePort: 5000
            path: /
